create mrjar sample for java worker